crates/edifact-rs-derive/tests/ui/fail_qualifier_from_invalid_format.stderr
error: expected integer literal
  --> $DIR/fail_qualifier_from_invalid_format.rs:14:45
   |
14 | #[edifact(segment = "RFF", qualifier_from = "0")]
   |                                             ^^^
